# industry-4.0-practics

./: README.md
GetAndJsonCMake/: CMakeLists.txt  readme.md
GetAndJsonCMake/src/: main.cpp
PythonGetJsonKav/: pyKav.py
